[tool.poetry]
name = "ai-agent"
version = "0.1.0"
description = ""
authors = ["LawrencePatrickSianto <lawrence.p.sianto@gdplabs.id>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.0"
langchain-community = "^0.3.4"
langgraph = "^0.2.41"
langchain-anthropic = "^0.2.3"
langgraph-checkpoint-sqlite = "^2.0.1"
langchain-openai = "^0.2.4"
wikipedia = "^1.4.0"
langchain-experimental = "^0.3.2"
duckduckgo-search = "^6.3.3"
langchain-groq = "^0.2.0"
youtube-transcript-api = "^0.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
